deploy/socialnetwork/loadbalancer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-network
