deploy/socialnetwork/loadbalancer/cluster-autoscaler.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cluster-autoscaler
  namespace: social-network
spec:
  serviceAccountName: cluster-autoscaler
  nodeSelector:
    type: system
  containers:
  - name: cas
    image: waterlemongan/microless-cluster-autoscaler:0.1.0
    volumeMounts:
    - name: config
      mountPath: "/config"
      readOnly: true
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  volumes:
  - name: config
    configMap:
      name: cluster-autoscaler-config
      items:
      - key: cas.json
        path: cas.json
