deploy/socialnetwork/loadbalancer/serverless-autoscaler.yaml
apiVersion: v1
kind: Pod
metadata:
  name: serverless-autoscaler
  namespace: social-network
spec:
  serviceAccountName: serverless-autoscaler
  nodeSelector:
    type: system
  containers:
  - name: sas
    image: waterlemongan/microless-serverless-autoscaler:0.1.1
    volumeMounts:
    - name: config
      mountPath: "/config"
      readOnly: true
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  volumes:
  - name: config
    configMap:
      name: serverless-autoscaler-config
      items:
      - key: sas.json
        path: sas.json
