deploy/socialnetwork/loadbalancer/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    microless: social-network
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: k8s-deploy
    app.kubernetes.io/component: ingress-service
    app.kubernetes.io/part-of: social-network
  name: restful-gateway
  namespace: social-network-lb
spec:
  hosts:
  - "*"
  gateways:
  - knative-serving/knative-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1
    route:
    - destination:
        host: restful-gateway.social-network-lb.svc.cluster.local
        port:
          number: 8081
